--- a/src/index.template.html
+++ b/src/index.template.html
@@ -16,6 +16,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="statics/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="statics/icons/favicon-96x96.png">
   <link rel="icon" type="image/ico" href="statics/icons/favicon.ico">
+
+  <link rel="stylesheet" href="https://static.line-scdn.net/line_flexible_msg/16ad97b48bb/css/sp/main.css">
 </head>
 
 <body>
